Menambah halaman Arsip dan Search

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <link rel="alternate" type="application/rss+xml" href="http://192.168.201.22:1313/index.xml" title="rss">
+<link rel="alternate" type="application/json" href="http://192.168.201.22:1313/index.json" title="json">
 <link rel="alternate" hreflang="en" href="http://192.168.201.22:1313/">
 <noscript>
     <style>
@@ -103,6 +104,16 @@
             </div>
         </div>
         <ul id="menu">
+            <li>
+                <a href="http://192.168.201.22:1313/archives/" title="Arsip">
+                    <span>Arsip</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://192.168.201.22:1313/search/" title="Cari (Alt &#43; /)" accesskey=/>
+                    <span>Cari</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
