--- a/public/404.html
+++ b/public/404.html
@@ -101,6 +101,16 @@
             </div>
         </div>
         <ul id="menu">
+            <li>
+                <a href="http://192.168.201.22:1313/archives/" title="Arsip">
+                    <span>Arsip</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://192.168.201.22:1313/search/" title="Cari (Alt &#43; /)" accesskey=/>
+                    <span>Cari</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
