--- a/public/404.html
+++ b/public/404.html
@@ -11,10 +11,10 @@
 <meta name="author" content="">
 <link rel="canonical" href="http://192.168.201.22:1313/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fd5566c526ae48aadabd950798a2dc3568536401560eae5caac3765a42a9e7b5.css" integrity="sha256-/VVmxSauSKravZUHmKLcNWhTZAFWDq5cqsN2WkKp57U=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://192.168.201.22:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://192.168.201.22:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://192.168.201.22:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://192.168.201.22:1313/apple-touch-icon.png">
+<link rel="icon" href="http://192.168.201.22:1313/me.jpg">
+<link rel="icon" type="image/png" sizes="16x16" href="http://192.168.201.22:1313/me.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://192.168.201.22:1313/me.png">
+<link rel="apple-touch-icon" href="http://192.168.201.22:1313/me.png">
 <link rel="mask-icon" href="http://192.168.201.22:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
