--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
 <meta name="author" content="">
 <link rel="canonical" href="http://192.168.201.22:1313/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fd5566c526ae48aadabd950798a2dc3568536401560eae5caac3765a42a9e7b5.css" integrity="sha256-/VVmxSauSKravZUHmKLcNWhTZAFWDq5cqsN2WkKp57U=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://192.168.201.22:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://192.168.201.22:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://192.168.201.22:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://192.168.201.22:1313/apple-touch-icon.png">
+<link rel="icon" href="http://192.168.201.22:1313/me.jpg">
+<link rel="icon" type="image/png" sizes="16x16" href="http://192.168.201.22:1313/me.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://192.168.201.22:1313/me.png">
+<link rel="apple-touch-icon" href="http://192.168.201.22:1313/me.png">
 <link rel="mask-icon" href="http://192.168.201.22:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
@@ -123,6 +123,23 @@
             height="220" width="260" />
         <h1>Halo, Saya Rakhmat</h1>
         <span>Selamat datang di blog catatan saya</span><div class="social-icons" >
+    <a href="https://github.com/rakhmatwh" target="_blank" rel="noopener noreferrer me"
+        title="Github">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path
+        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+    </path>
+</svg>
+    </a>
+    <a href="mailto:rakhmatwh@gmail.com" target="_blank" rel="noopener noreferrer me"
+        title="Email">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+    <polyline points="22,6 12,13 2,6"></polyline>
+</svg>
+    </a>
 </div>
 
         <div class="buttons">
