--- a/public/search/index.html
+++ b/public/search/index.html
@@ -12,10 +12,10 @@
 <link rel="canonical" href="http://192.168.201.22:1313/search/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fd5566c526ae48aadabd950798a2dc3568536401560eae5caac3765a42a9e7b5.css" integrity="sha256-/VVmxSauSKravZUHmKLcNWhTZAFWDq5cqsN2WkKp57U=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.0cb52d6b1628dc11278c9d7d1418939954e1ba118f5e2c29f43a3c0b14d5a8e4.js" integrity="sha256-DLUtaxYo3BEnjJ19FBiTmVThuhGPXiwp9Do8CxTVqOQ="></script>
-<link rel="icon" href="http://192.168.201.22:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://192.168.201.22:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://192.168.201.22:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://192.168.201.22:1313/apple-touch-icon.png">
+<link rel="icon" href="http://192.168.201.22:1313/me.jpg">
+<link rel="icon" type="image/png" sizes="16x16" href="http://192.168.201.22:1313/me.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://192.168.201.22:1313/me.png">
+<link rel="apple-touch-icon" href="http://192.168.201.22:1313/me.png">
 <link rel="mask-icon" href="http://192.168.201.22:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
